// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component testing opens any clicked section one at a time 1`] = `
<div>
  <div>
    <ul>
      <li>
        <button
          key="0"
          onClick={[Function]}
        >
          Section 1
        </button>
      </li>
    </ul>
  </div>
  <div>
    <ul>
      <li>
        <button
          key="1"
          onClick={[Function]}
        >
          Section 2
        </button>
      </li>
    </ul>
  </div>
  <div>
    <ul>
      <li>
        <button
          key="2"
          onClick={[Function]}
        >
          Section 3
        </button>
      </li>
    </ul>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
  </div>
</div>
`;

exports[`Accordion component testing renders empty without errors 1`] = `
<div>
  <div>
    <ul>
      <li>
        <button
          key="0"
          onClick={[Function]}
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Accordion component testing renders no sections by default 1`] = `
<div>
  <div>
    <ul>
      <li>
        <button
          key="0"
          onClick={[Function]}
        >
          Section 1
        </button>
      </li>
    </ul>
  </div>
  <div>
    <ul>
      <li>
        <button
          key="1"
          onClick={[Function]}
        >
          Section 2
        </button>
      </li>
    </ul>
  </div>
  <div>
    <ul>
      <li>
        <button
          key="2"
          onClick={[Function]}
        >
          Section 3
        </button>
      </li>
    </ul>
  </div>
</div>
`;
